--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,110 @@
-numpy==2.1.3
-packaging==24.2
-pillow==11.0.0
-wheel @ file:///opt/homebrew/Cellar/python%403.12/3.12.7_1/libexec/wheel-0.44.0-py3-none-any.whl#sha256=c01326144883c50263d6967d1145640f3bbc8dfab32c2cbe817ef61d7a810219
+annotated-types==0.7.0
+appnope==0.1.4
+asttokens==3.0.0
+beautifulsoup4==4.13.5
+blis==1.3.0
+catalogue==2.0.10
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.3.0
+cloudpathlib==0.22.0
+comm==0.2.3
+confection==0.1.5
+contourpy==1.3.2
+cssselect==1.3.0
+cycler==0.12.1
+cymem==2.0.11
+debugpy==1.8.17
+decorator==5.2.1
+docx2python==3.5.0
+exceptiongroup==1.3.0
+executing==2.2.1
+filelock==3.19.1
+fonttools==4.60.0
+fsspec==2025.9.0
+hf-xet==1.1.10
+huggingface-hub==0.35.1
+idna==3.10
+ipykernel==6.30.1
+ipython==8.37.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.2
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+kiwisolver==1.4.9
+langcodes==3.5.0
+langdetect==1.0.9
+language_data==1.3.0
+lxml==6.0.2
+marisa-trie==1.3.1
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.6
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mpmath==1.3.0
+murmurhash==1.0.13
+nest-asyncio==1.6.0
+networkx==3.4.2
+numpy==2.2.6
+packaging==25.0
+pandas==2.3.2
+paragraphs==1.0.1
+parso==0.8.5
+patsy==1.0.1
+pexpect==4.9.0
+pillow==11.3.0
+platformdirs==4.4.0
+preshed==3.0.10
+prompt_toolkit==3.0.52
+psutil==7.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==21.0.0
+pydantic==2.11.9
+pydantic_core==2.33.2
+Pygments==2.19.2
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq==27.1.0
+regex==2025.9.18
+requests==2.32.5
+rich==14.1.0
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.15.3
+seaborn==0.13.2
+shellingham==1.5.4
+six==1.17.0
+smart_open==7.3.1
+soupsieve==2.8
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+stack-data==0.6.3
+statsmodels==0.14.5
+sympy==1.14.0
+thinc==8.3.6
+threadpoolctl==3.6.0
+tokenizers==0.22.1
+torch==2.8.0
+tornado==6.5.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.56.2
+typer==0.19.2
+types-html5lib==1.1.11.20250917
+types-lxml==2025.8.25
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+wasabi==1.1.3
+wcwidth==0.2.14
+weasel==0.4.1
+wrapt==1.17.3
